Correciones de acentos y en estilos
correciones de acentos en Registro.html, y se agrego un padding en estilos.css

--- a/src/registro.html
+++ b/src/registro.html
@@ -14,12 +14,12 @@
   </head>
   <body>
       <form class="formulario">
-          <h1>Registro</h1>
+          <h1>Registro de usuarios </h1>
           <div class="contenedor">
             <!--Contenedores para introducir los datos de los usuarios-->
             <div class="input-contenedor">
                 <i class="fas fa-user icon"></i>
-                <input type="text" placeholder="Nombres">
+                <input type="text" placeholder="Nombre(s)">
             </div>
 
             <div class="input-contenedor">
@@ -29,7 +29,7 @@
 
             <div class="input-contenedor">
                 <i class="far fa-envelope icon"></i>
-                <input type="text" placeholder="Correo Electronico">
+                <input type="text" placeholder="Correo Eléctronico">
             </div>
 
             <div class="input-contenedor">
@@ -39,7 +39,7 @@
 
             <div class="input-contenedor">
                 <i class="fas fa-lock icon"></i>
-                <input type="text" placeholder="Numero de telefono">
+                <input type="text" placeholder="Número de telefono">
             </div>
 
             <!--Palo esta haciendo el login, cambiar el link del html-->
