--- a/src/registro.html
+++ b/src/registro.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="input-contenedor">
-                <i class="fas fa-lock icon"></i>
+                <i class="fas fa-phone-alt icon"></i>
                 <input type="text" placeholder="Número de telefono">
             </div>
 
