Creación de login.html y modificaciones
Se creo el archivo de login.html, se realizaron modificaciones en estilos.css y en registro.html. Puros cambios visuales

--- a/src/registro.html
+++ b/src/registro.html
@@ -18,27 +18,27 @@
         <div class="contenedor">
           <!--Contenedores para introducir los datos de los usuarios-->
           <div class="input-contenedor">
-              <i class="fas fa-user icon"></i>
+            <i class="bi bi-person-circle icon"></i>
               <input type="text" placeholder="Nombre(s)">
           </div>
 
           <div class="input-contenedor">
-              <i class="fas fa-user icon"></i>
+              <i class="bi bi-person-circle icon"></i>
               <input type="text" placeholder="Apellidos">
           </div>
 
           <div class="input-contenedor">
-              <i class="far fa-envelope icon"></i>
+            <i class="bi bi-envelope-fill icon"></i>
               <input type="text" placeholder="Correo Eléctronico">
           </div>
 
           <div class="input-contenedor">
-              <i class="fas fa-lock icon"></i>
+            <i class="bi bi-lock-fill icon "></i>
               <input type="password" placeholder="Contraseña">
           </div>
 
           <div class="input-contenedor">
-              <i class="fas fa-phone-alt icon"></i>
+            <i class="bi bi-telephone-fill icon "></i>
               <input type="text" placeholder="Número de telefono">
           </div>
 
