cambio de nombre del boton
se cambio el nombre del boton

--- a/src/login.html
+++ b/src/login.html
@@ -23,7 +23,7 @@
                 <input type="password" placeholder="Contraseña">
             </div>
 
-            <input type= "submit" value="Iniciar Sesión" class="button" name="registrarBtn">
+            <input type= "submit" value="Iniciar Sesión" class="button" name="ingresarBtn">
             <p>¿No tienes cuenta? <a class="link" href="registro.html">Registrarte</a></p>
         </div>
     </form>
