--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
     <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/carrusel/cp 2@2x-8.png" class="d-block w-25" alt="...">
+          <img src="img/carrusel/img1.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="img/carrusel/Recurso 10@2x-8.png" class="d-block w-25" alt="...">
+          <img src="img/carrusel/img2.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="img/carrusel/tazas@2x-8.png" class="d-block w-25" alt="...">
+          <img src="img/carrusel/img3.png" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
