Modificacion de estilos

--- a/index.html
+++ b/index.html
@@ -37,15 +37,24 @@
           <div class="collapse navbar-collapse" style="justify-content: flex-end;" id="">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Acciones:</a>
+                <a class="nav-link active" aria-current="page" href="#">Nombre de usuario</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Acceder</a>
+                <a class="nav-link active" aria-current="page" >Acciones:</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Vistas/v_login.php">Acceder</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Vistas/v_registro.php">Registro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Panel de control</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Salir</a>
               </li>
               
-              <li class="nav-item">
-                <a class="nav-link" href="#">Registro</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -74,7 +83,7 @@
                 </li>
                 
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Productos
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
